Closed Bug 40581 Opened 24 years ago Closed 24 years ago

automigration and first time migration from 4.x profile gives error

Categories

(SeaMonkey :: Preferences, defect, P3)

x86
All

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: agracebush, Assigned: neeti)

References

Details

(Keywords: smoketest)

Steps to reproduce:
1. Install build 2000-05-25-09M16 - on machines with one and more than one 4.x 
profile.
2. On machine with more than one 4.x profile, choose one and start netscape6
3. Choose to migrate/convert the profile

Actual result:  Error message
Netscape - JS Preference Warning
An error occurred reading the startup configuration file. Please contact your 
administrator.

Expected result: launch with migrated profile

Note* second launch succeeds
Keywords: nsbeta2, smoketest
Bhuvan, please take a look.
Assignee: selmer → racham
Looks like some garbage is getting written into prefs file during/after the 
migration process...will look into it.
Status: NEW → ASSIGNED
Target Milestone: --- → M17
surprising...i don't see it on ymchine with today's build (sweetlou). Will come 
to your desk for further info..
This is reproducible after clean install. Commercial build issue only.

Presence of component.reg is making the difference here. All I need to do to 
reproduce this delete compoenent.reg and try to run the app i.e., create a need 
for autoreg. [Note : Grace mentioned in her report that it runs ok on second 
time...and that is beacuse of already existing component.reg]. It happens all 
the time with fresh installs as autoreg happens all the time in this path.

Looks like this is related to the implementation that needs to read netscape.cfg 
in prefs code. I think after the migration process is over....profile manager 
calls ReadUserPrefs 
(http://lxr.mozilla.org/seamonkey/source/profile/src/nsProfile.cpp#380). Prefs 
service at this point tries to read netscape.cfg file and is failing. I will 
work with neeti to track this down further. A note here is that reading of 
netscape.cfg requires services of Netscape PSM. Need to see if this link has 
anything to do with the problem. 

This is windows only issue.

I already spoke to dan veditz, dp and neeti about this. Adding Seth to the 
discussion.
Severity: normal → major
This does not happen, when I enable the feature for debug builds.(after deleting  
the component.reg file).

Sean, when I install the optimized builds from sweetlou, the progress dialog 
says that it is installing psm.exe, but I cannot find it anywhere. Where is psm 
being installed in the optimized builds?

Neeti
Generally under c:\program files\common files\netscape shared\security, 
although there is (or was) some code to try to install it over an existing one 
if the old one happened to be installed elsewhere. In that case you'd be on 
your own trying to find it.

You can do a windows file find for "psm.exe"
Reassigning this bug to neeti. This error is occuring due to failure in reading 
of netscape.cfg in the absence of component.reg. I will continue working with 
neeti on this. Adding leaf in the cc list (for any possible build issues).
Assignee: racham → neeti
Status: ASSIGNED → NEW
prefs to mcafee
Assignee: neeti → locka
Component: Profile Manager BackEnd → ActiveX Wrapper
QA Contact: gbush → cpratt
Target Milestone: M17 → ---
prefs to mcafee
Assignee: locka → neeti
Component: ActiveX Wrapper → Preferences: Backend
QA Contact: cpratt → sairuh
argh... didn't work the last time. pardon the spam. ->mcafee
Assignee: neeti → mcafee
Component: Preferences: Backend → Preferences
On Win NT 4.0, with todays builds, I see the message 
"error with config , see admin" message if I do any of the following.
1)Install seamonkey to any directory other than the default ..i.e. I tried 
D:\seamonkey. (Default was c:\Program Files\Netscape)
2)Install and create a new profile with a name different from the default i:e: I 
tried "52608M16" for a new profile name. (Default was "New User")
If I do any of the above, Seamonkey fails to load browser, mail(with -mail 
parameter) aim (with -aim parameter) etc. if I install using any of above 
methods.
I saw this occur on two different NT 4.0 boxes in QA (Mine and Fenella's)

Additional Note: 
Fenella used the default install directory and a profile migrated with a 
previous NS 6 build, and that worked OK.
Why the heck should this be mcafee? It broke when neeti added netscape.cfg 
processing to the build, she should be the one to turn it off (fixing this 
bug, no doubt reopening the netscape.cfg feature bug) until it can be make to 
work correctly.
QA Contact: sairuh → gbush
I agree, sending the bug to neeti ...
Assignee: mcafee → neeti
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Turned off netscape.cfg feature, bug 5132.
*** Bug 40762 has been marked as a duplicate of this bug. ***
this is working on both automigration and migration of >1 4.x profile
build 2000052920
Status: RESOLVED → VERIFIED
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.