fix for bug 40581. a=leaf. Turning off netscape.cfg feature.