modules/libpref/src/nsPref.cpp
@@ -504,12 +504,13 @@ NS_IMETHODIMP nsPref::ReadUserPrefs()
     }
     if (NS_SUCCEEDED(rv))
 		  useUserPrefFile(); 
-
+/*
 #ifndef NS_DEBUG
 #ifndef XP_MAC
     rv = useLockPrefFile();
 #endif
 #endif
+*/
 
     return rv;
 }
